--- a/Backend/.env
+++ b/Backend/.env
@@ -10,4 +10,5 @@ JWT_EXPIRY_MINUTES=60
 DATABASE_URL=postgresql://postgres:postgres@db:5432/aegisflow
 
 # CORS
-CORS_ORIGINS=http://localhost:3000
+CORS_ORIGINS=["http://localhost:3000"]
+
