--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -1,22 +1,34 @@
+# =========================
 # Core Framework
+# =========================
 fastapi==0.110.0
 uvicorn[standard]==0.27.1
 
+# =========================
 # Configuration & Environment
+# =========================
 python-dotenv==1.0.1
 pydantic-settings==2.2.1
 
-# Database
+# =========================
+# Database (psycopg v3)
+# =========================
 sqlalchemy==2.0.25
-psycopg2-binary==2.9.9
+psycopg[binary]==3.3.2
 
+# =========================
 # Authentication & Security
+# =========================
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 
+# =========================
 # Observability
+# =========================
 prometheus-client==0.19.0
 
-# Testing (used later in CI)
+# =========================
+# Testing
+# =========================
 pytest==8.0.0
 httpx==0.26.0
