feat(db): add SQLAlchemy engine and session management

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,5 @@ POSTGRES_DB=aegisflow_db
 POSTGRES_USER=aegisflow_user
 POSTGRES_PASSWORD=change_this_password
 POSTGRES_PORT=5432
+
+DATABASE_URL=postgresql://aegisflow_user:change_this_password@localhost:5432/aegisflow_db
