added some important libraries and fixed database congiguration bug

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-POSTGRES_DB=aegisflow_db
-POSTGRES_USER=aegisflow_user
-POSTGRES_PASSWORD=change_this_password
-POSTGRES_PORT=5432
-
-DATABASE_URL=postgresql://aegisflow_user:change_this_password@localhost:5432/aegisflow_db
+APP_ENV=development
+DEBUG=true
+JWT_SECRET=your_secret_here
+JWT_EXPIRY_MINUTES=60
+DATABASE_URL=postgresql://user:password@localhost/db
+CORS_ORIGINS=["http://localhost:3000"]
