backent integration completed

--- a/Backend/.env
+++ b/Backend/.env
@@ -7,7 +7,7 @@ JWT_SECRET=change_this_secret
 JWT_EXPIRY_MINUTES=60
 
 # Database
-DATABASE_URL=postgresql://postgres:postgres@db:5432/aegisflow
+DATABASE_URL=postgresql://aegisflow_user:strongpassword123@localhost:5433/aegisflow_db
 
 # CORS
 CORS_ORIGINS=["http://localhost:3000"]
