test(auth): add pytest setup and auth tests

--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -15,6 +15,7 @@ pydantic-settings==2.2.1
 # =========================
 sqlalchemy==2.0.25
 psycopg[binary]==3.3.2
+alembic==1.13.1
 
 # =========================
 # Authentication & Security
